# CubeGame

./: CMakeLists.txt  main.cpp
CrossCompiler/: Needs.txt
Definitions/Core/: Chunk.cppm  ChunkAllocator.cppm  ChunkGenerationSystem.cppm  Config.h  Constants.hpp  Core.cppm  Player.cppm
Definitions/Libs/: Frustum.cppm  HashMapMod.cppm  MathUtils.cppm
Definitions/PhysicEngine/: AABB.cppm  Keyboard.cppm  Mouse.cppm  Physic.cppm  PhysicEngine.cppm
Definitions/Platform/: Callbacks.cppm  IOData.cppm  Window.cppm
Definitions/RenderEngine/: Camera.cppm  CreateShader.cppm  FPSCounter.cppm  GLDebug.cppm  GpuManager.cppm  RenderEngine.cppm  VRamAllocator.cppm
Headers/Camera/: Camera.hpp
Headers/ChunkSystem/: Chunk.hpp  ChunkAllocator.hpp  ChunkGenerationManager.h  HashSystem.hpp
Headers/Configuration/: Config.h
Headers/Debug/: FPSCounter.hpp  GLDebug.hpp
Headers/IOReactions/: Callbacks.h  KeyboardControl.h  MouseInteractions.h
Headers/Libs/: Hash_Map_Modification.hpp
Headers/Math/: MathUtils.h
Headers/ObjectsAndPhysic/: AABB.h  Physic.hpp  Player.h
Headers/Render/: ChunksGpuManager.hpp  Frustum.hpp  GPUDrivenRenderTools.h  PriorityThreadPool.hpp  ShaderCreate.h  Window.hpp
Headers/Utils/: OptimizationTools.hpp
Libs/: DepsLibs.txt  Needs.txt
Libs/glad/include/glad/: glad.h
Libs/glad/src/: glad.c
Source/Camera/: Camera.cpp
Source/ChunkSystem/: Chunk.cpp  ChunkAllocator.cpp  ChunkGenerationManager.cpp  ChunkGenerationSystem.cpp
Source/Configuration/: Window.cpp
Source/Debug/: GLDebug.cpp
Source/IOReactions/: Callbacks.cpp  Keyboard.cpp  Mouse.cpp  MouseInteractions.cpp
Source/Math/: MathUtils.cpp
Source/ObjectsAndPhysic/: AABB.cpp  Physic.cpp  Player.cpp
Source/Render/: ChunksGpuManager.cpp  CreateShader.cpp  GpuManager.cpp
Source/Utils/: VRamAllocator.cpp
cmake/: clang-windows.cmake
shaders/: shader.comp  shader.frag  shader.vert
